# sequoia

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  vcpkg.json
lib/: ATTRIBUTION.txt  CHANGELOG.md  CMakeLists.txt  vcpkg.json
lib/src/core/: Backup.cpp  Backup.h  BackupConfig.h  Compressor.cpp  Compressor.h  CoreGui.cpp  CoreGui.h  External.h  ExternalServer.cpp  ExternalServer.h  LogHelpers.cpp  LogHelpers.h  Main.cpp  Version.h  World.cpp  World.h  ZipCompressor.cpp  ZipCompressor.h
src/core/: Backup.cpp  Backup.h  BackupConfig.h  CoreGui.cpp  CoreGui.h  Main.cpp  Version.h  World.cpp  World.h  ZipCompressor.cpp  ZipCompressor.h
ui/: AboutPage.xaml  AboutPage.xaml.cs  App.xaml  App.xaml.cs  HomePage.xaml  HomePage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Sequoia.csproj  Sequoia.slnx  WindowBase.xaml  WindowBase.xaml.cs  app.manifest
ui/Properties/: launchSettings.json
